XO_Project_UAT/Project--XOGrp--UAT/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Lead_Volume_Last_6_Months__c</fullName>
        <label>Lead Volume Last 6 Months</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50+</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used by New Voice Media to connect Cases to Leads. I will only add it to the Voicemail Case type as of 7/18/2017. Created for CSP-2150.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Paid_Status__c</fullName>
        <formula>TEXT(Account.Local_Paid_Status__c)</formula>
        <label>Local Paid Status(deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_ID__c</fullName>
        <formula>Account.DynamicsAccID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longest_Past_Due__c</fullName>
        <formula>Account.Longest_Past_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Longest Past Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Make_Good_Drilldown__c</fullName>
        <label>Make Good Drilldown</label>
        <picklist>
            <controllingField>Saved_By__c</controllingField>
            <picklistValues>
                <fullName>Rate Freeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzz Badge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spolight Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Featured Vendor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Budget_Discount__c</fullName>
        <description>SS-5386</description>
        <label>Monthly Budget Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Budget__c</fullName>
        <label>Monthly Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months_Left_In_Contract__c</fullName>
        <label>Months Left In Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_with_TK__c</fullName>
        <description>Time with The Knot in months</description>
        <label>Months with TK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_Review_IDs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Review IDs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Storefronts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Storefronts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__EmailSentTo__c</fullName>
        <label>EmailSentTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMAccountOverride__c</fullName>
        <label>NVMAccountOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMCaseOrigin__c</fullName>
        <description>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</description>
        <inlineHelpText>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</inlineHelpText>
        <label>NVM Case Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMNodeOverride__c</fullName>
        <description>Used to override the NewVoiceMedia node a case routing request is sent to</description>
        <inlineHelpText>Used to override the NewVoiceMedia node a case routing request is sent to</inlineHelpText>
        <label>NVMNodeOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedIn__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged in</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged in</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedIn</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedOut__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged out</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged out</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedOut</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMRoutable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether a case should be routed to an agent via NVM</description>
        <inlineHelpText>Used to determine whether a case should be routed to an agent via NVM</inlineHelpText>
        <label>NVMRoutable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__RoutePlanIdentifier__c</fullName>
        <label>RoutePlanIdentifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Skills__c</fullName>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMCustomerPhone__c</fullName>
        <description>NVM field to retrieve Customer Phone</description>
        <formula>if(
MID(TRIM((SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Contact.Phone,&quot;+&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;*&quot;,&quot;&quot;))),1,1) =&quot;1&quot;,
MID(TRIM((SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Contact.Phone,&quot;+&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;*&quot;,&quot;&quot;))),2,10),
MID(TRIM((SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Contact.Phone,&quot;+&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;*&quot;,&quot;&quot;))),1,10)
)</formula>
        <inlineHelpText>NVM field to retrieve Customer Phone</inlineHelpText>
        <label>NVM Customer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVM_Case_Agent_ID__c</fullName>
        <formula>Owner:User.NVMContactWorld__NVM_Agent_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NVM Case Agent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negative_Invoice_Value__c</fullName>
        <label>Negative Invoice Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Show_Attempts__c</fullName>
        <label>No Show Attempts</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Num_Of_Days_Since_Created_Day__c</fullName>
        <formula>TODAY()- DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#Of Days Since Created Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Past_Due__c</fullName>
        <formula>Today() - Account.Longest_Past_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This number calculates by looking at the Longest Past Due Date on the Account and gives the amount of days between then and today</inlineHelpText>
        <label>Number of Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onboarding_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases (Onboarding Case)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onboarding_Email_Template_Calendly_Link__c</fullName>
        <description>CSP-3195 Route All Onboarding Cases to Queue
A Calendly link including the case ID should be generated and populated onto a field on the case so that when the calendly link is used to schedule the event that is created is a child of the case</description>
        <formula>IF(RecordType.Name=&apos;2 - Onboarding&apos;,&apos;https://calendly.com/tk-account-strategist/30min?salesforce_uuid=&apos; + Id,null)</formula>
        <inlineHelpText>CSP-3195 Route All Onboarding Cases to Queue
A Calendly link including the case ID should be generated and populated onto a field on the case so that when the calendly link is used to schedule the event that is created is a child of the case</inlineHelpText>
        <label>Onboarding Email Template Calendly Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Review_Text__c</fullName>
        <label>Original Review Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_Drilldown__c</fullName>
        <label>Outcome Drilldown</label>
        <picklist>
            <controllingField>Outcome__c</controllingField>
            <picklistValues>
                <fullName>Duplicate Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inappropriate Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Storefront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer Did not Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer&apos;s Request</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Adjusted Cancel Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blank Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Bad Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Externally Resolved (Until bonus has fully changed over)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Reporter Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efforts Exhausted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Faith Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructions/Policy Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max attempts no contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max Attempts - No Written Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promised Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refusal to Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested Contract Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested to Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Remains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved Hard Concessions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved No Concessions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDPC_Date_Time_Stamp__c</fullName>
        <label>PDPC DateTime Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Paid_Status__c</fullName>
        <formula>TEXT(Account.Local_Paid_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Due_Potential_Collections__c</fullName>
        <label>Past Due Potential Collections</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Due_Potential__c</fullName>
        <label>Past Due Potential</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Due_on_Case_Open__c</fullName>
        <inlineHelpText>This value is set at time of case creation and will not update. This was how much was owed on the Account when the case was opened.</inlineHelpText>
        <label>Past Due on Case Open</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Possible_Renewal__c</fullName>
        <description>CSP-1869 | If &quot;Yes&quot; this means the creating Opportunity had a Type of &quot;Renewal&quot;, so this Callback record may be for a Subscription Renewal.</description>
        <inlineHelpText>If &quot;Yes&quot; this means the creating Opportunity had a Type of &quot;Renewal&quot;, so this Callback record may be for a Subscription Renewal.</inlineHelpText>
        <label>Possible Renewal</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreferredContactMethod__c</fullName>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone/Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concierge Venue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transactions</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Name__c</fullName>
        <description>Lists the product that was sold</description>
        <label>Rate Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <displayFormat>CASE-{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>A system-generated id that uniquely identifies the record</inlineHelpText>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Rep_Type__c</fullName>
        <label>Rep Type</label>
        <picklist>
            <picklistValues>
                <fullName>BDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <label>Reported By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Type__c</fullName>
        <label>Reporter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Core Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Core Sales Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Core Finance - ARR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Core Regional Sales (RSR, RSD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Core Strategy Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helpdesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Inside Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporter_User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>username of reporter if a user of salesforce</description>
        <label>Internal Reporter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Storefront_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requested Storefront Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reschedule_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reschedule Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution_Times__c</fullName>
        <label>Resolution Times(Hours)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution_Timestamp__c</fullName>
        <label>Resolution Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_TimeStamp__c</fullName>
        <description>CSP-2528  Store current time from status &quot;New&quot; to any other status.</description>
        <label>Response TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Times__c</fullName>
        <description>CSP-2528 Response Times from status &quot;New&quot; to any other status.</description>
        <label>Response Times(Hours)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Details__c</fullName>
        <label>Review Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Review_ID__c</fullName>
        <label>Review ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer_Email__c</fullName>
        <label>Reviewer Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer_String__c</fullName>
        <label>Reviewer String</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSEmailTemplateCalendlyLink__c</fullName>
        <formula>Owner:User.Email_Template_Calendly_Link__c</formula>
        <label>SS Email Template Calendly Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSEmailTemplateNameCardLink__c</fullName>
        <formula>Owner:User.Email_Template_Name_Card_Link__c</formula>
        <label>SS Email Template Name Card Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSUserPhone__c</fullName>
        <formula>Owner:User.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS User Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSUserSurveyLink__c</fullName>
        <formula>Owner:User.User_Survey_Link__c</formula>
        <label>SS User Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Save_For_Later__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When clicking &quot;Save For Later&quot; button will be checked on cancel case wizard page.</description>
        <label>Save For Later</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saved_By__c</fullName>
        <label>Saved By</label>
        <picklist>
            <controllingField>Outcome__c</controllingField>
            <picklistValues>
                <fullName>Dashboard / Stats Walkthrough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dedicated Point of Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downsell/Remove Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explanation of Stats/Clickthroughs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offering Non-Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storefront Redesign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Market/Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Freeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reset Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard Walkthrough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make Good</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saved_Drilldown__c</fullName>
        <label>Saved Drilldown</label>
        <picklist>
            <controllingField>Outcome__c</controllingField>
            <picklistValues>
                <fullName>No concession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved soft concession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved hard concession</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saved_Monthly_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Saved Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditionalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrepreneur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Onboarding_Email_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Onboarding Email Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Upsold__c</fullName>
        <label># Services Upsold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skip_The_Notification_And_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip The Notification And Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Storefront_Completion__c</fullName>
        <label>Storefront Completion %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Storefront_ID__c</fullName>
        <label>Storefront ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy_Specialist__c</fullName>
        <formula>Account.Strategy_Specialist__r.FirstName + &apos; &apos; +  Account.Strategy_Specialist__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Strategist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Thread_ID__c</fullName>
        <formula>&quot;[ ref:_&quot; 
&amp; LEFT($Organization.Id,5) 
&amp; SUBSTITUTE(RIGHT($Organization.Id,10), &quot;0&quot;, &quot;&quot; ) 
&amp; &quot;._&quot; 
&amp; LEFT(Id,5) 
&amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) 
&amp; RIGHT(Id,5) 
&amp; &quot;:ref ]&quot;</formula>
        <label>Subject Thread ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionProductCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to Subscription Product &amp; Charge.</description>
        <label>Subscription Product &amp; Charge</label>
        <referenceTo>Zuora__SubscriptionProductCharge__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Charge_Number__c</fullName>
        <externalId>true</externalId>
        <label>Subscription Charge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <description>Lists the zuora subscription number (e.g. A-S00142538)</description>
        <externalId>true</externalId>
        <label>Subscription Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Due_Date__c</fullName>
        <description>CSP-3150</description>
        <label>Task Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <description>CSP-3150</description>
        <label>Task Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Subject__c</fullName>
        <description>CSP-3150</description>
        <label>Task Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <description>Lists the end date of the product</description>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <description>Lists the start date of the product</description>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Thread_ID__c</fullName>
        <formula>&quot;ref:_&quot; 
&amp; LEFT($Organization.Id,5) 
&amp; SUBSTITUTE(RIGHT($Organization.Id,10), &quot;0&quot;, &quot;&quot; )
&amp; &quot;._&quot; 
&amp; LEFT(Id,5) 
&amp; SUBSTITUTE(Left(RIGHT(Id,10), 4), &quot;0&quot;, &quot;&quot;) 
&amp; RIGHT(Id,5) 
&amp; &quot;:ref&quot;</formula>
        <label>Thread ID</label>
        <type>Text</type>
    </fields>
</CustomObject>